--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "require": {
-    "php-yaoi/php-yaoi": "1.0.21",
+    "php-yaoi/php-yaoi": "^1.0",
     "facebook/php-sdk-v4": "^5.2"
   },
   "autoload": {
