--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
   "require": {
     "php-yaoi/php-yaoi": "^1.0",
-    "facebook/php-sdk-v4": "^5.2"
+    "facebook/php-sdk-v4": "^5.2",
+    "alcalyn/elo": "^1.0"
   },
   "autoload": {
     "psr-4": {
