--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
   },
   "autoload": {
     "psr-4": {
-      "Rankster\\": "src/"
+      "Rankster\\": "src/",
+      "Rankster\\Tests\\": "tests/src"
     }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^4.8"
   }
 }
