--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "require": {
-    "php-yaoi/php-yaoi": "^1.0",
-    "facebook/php-sdk-v4": "^5.2",
+    "php-yaoi/php-yaoi": "^1.0.27",
+    "facebook/graph-sdk": "^5.3",
     "alcalyn/elo": "^1.0"
   },
   "autoload": {
