--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "require": {
     "php-yaoi/php-yaoi": "^1.0.27",
     "facebook/graph-sdk": "^5.3",
-    "alcalyn/elo": "^1.0"
+    "alcalyn/elo": "^1.0",
+    "phpmailer/phpmailer": "^5.2"
   },
   "autoload": {
     "psr-4": {
