--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,4 +29,4 @@ cli:
         - .:/code
     links:
         - mysql
-    command: /code/bin/tool migrate
+    command: sleep 10 && /code/bin/tool migrate
